--- a/css/index-remember.css
+++ b/css/index-remember.css
@@ -1,5 +1,6 @@
 .container_remember_this {
     display: flex;
+    flex-direction: column;
     font-size: 100%;
     font: inherit;
     box-sizing: border-box;
@@ -44,23 +45,23 @@
     margin: 50px 30px;
 }
 
+.remember_this {
+    margin-top: 100px;
+}
 
-@media (max-width: 1000px) {
-    .container_remember_this {
-        display: block;
-        flex-direction: row;
+@media (min-width: 1000px) {
+    .remember_this {
+        display: grid;
+        grid-template-columns: 500px 500px;
         align-items: center;
+        margin-top: 100px;
+        margin-bottom: 100px;
         justify-content: space-around;
-        flex: 1;
-        margin: 15px 15px 15px 15px;
-        font-size: 100%;
-        box-sizing: border-box;
-        padding: 90px 24px 90px 24px;
-        padding: 0px 15px 0px 15px;
-
+      
     }
 }
 
 .remember_this__features {
     margin-left: 50px;
 }
+
