--- a/css/index-making.css
+++ b/css/index-making.css
@@ -1,36 +1,36 @@
 .master-coffe-making {
-    /* margin: 0px -15px 0px -15px; */
     display: flex;
     flex-direction: column;
     font-size: 100%;
-    /* font: inherit; */
     box-sizing: border-box;
     padding: 90px 24px 90px 24px;
-    align-items: left;
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    margin-right: -15px;
+    overflow-x: hidden;
+    justify-content: flex-start;
+}
+
+.container_making-coffee {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .image__making {
-    /* width: 366px;
-    min-height: 347px; */
-    /* font-size: 100%; */
     width: 100%;
     height: 100%;
     object-fit: contain;
     object-position: 50% 50%;
+    padding-left: 15px;
+    padding-right: 15px;
 
 }
 
 .columns_making__coffee {
-    display: flex;
-    flex-direction: column;
-    padding-left: 10px;
-    padding-right: 10px;
     font-size: 100%;
-}
-
-.column__making-coffee {
     margin-top: 50px;
-
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .fonts_logo_making {
@@ -54,14 +54,14 @@
     text-transform: none;
     text-decoration: none;
     font-style: normal;
-    justify-content: flex-start;
+
 }
 
 .p_making__font {
     font-size: 19px;
     line-height: 1.5;
     font-family: var(--text-content);
-    font-weight: 400;
+    font-weight: 500;
     color: var(--text-color-gr);
     margin-top: 25px;
     text-decoration: none;
@@ -106,6 +106,7 @@
     min-height: 3px;
     width: 10%;
     background-color: var(--text-color);
+    /* border: 2px solid var(--text-color); */
     margin-top: 20px;
 }
 
@@ -118,17 +119,13 @@
     margin-top: 25px;
 }
 
-/* .fonts_logo_making {
-    --bs-body-font-family: var(--text-gold);
-} */
-
 .btn_making_learn_more {
     font-weight: 400;
     color: #fff;
     background-color: var(--text-color);
     font-family: var(--text-content);
     cursor: pointer;
-    padding: 18px 30px;
+    padding: 15px 30px;
     margin-top: 10px;
     text-decoration: none;
 }
@@ -137,9 +134,8 @@
     text-decoration: none;
     color: var(--color-white);
     background: var(--background-dark);
+
 }
-
-
 
 @media (min-width: 780px) {
     .container_making-coffee {
@@ -147,90 +143,60 @@
         flex-direction: row;
         justify-content: space-around;
         flex: 1;
-        margin: 0px 15px 0px 15px;
-        font-size: 100%;
-        box-sizing: border-box;
-        padding: 90px 24px 90px 24px;
-        padding: 0px 15px 0px 15px;
         overflow-x: hidden;
-
-
-
     }
 
     .columns_making__coffee {
         display: flex;
         flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        flex: 1;
-        /* box-sizing: border-box; */
-        /* overflow-x: hidden; */
-
-    }
-
-    .image__making {
-        max-width: 470px;
-        max-height: 445px;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        object-position: 50% 50%;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-
-
-
+        overflow-x: hidden;
     }
 
     .column__making-coffee {
         padding-left: 15px;
         padding-right: 15px;
-        flex-basis: 100%;
-        max-width: 100%;
+        flex-basis: auto;
         margin-top: 0px;
         overflow-x: hidden;
-        /* padding-top: 50px; */
+       
+    }
+
+    .column_making-learn-more {
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-top: 0%;
+        overflow-x: hidden;
+        box-sizing: border-box;
+        width: 100%;
+
+
+    }
+
+
+
+    .image__making {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: 50% 50%;
+        font: inherit;
+        vertical-align: baseline;
+
+
     }
 
     .h2_master_coffee_making {
         flex-basis: 25%;
         max-width: 25%;
         margin-top: 20px;
-        margin-left: 15px;
 
-        margin-top: 20px;
-    }
 
-    .fonts_logo_making {
-        padding-left: 15px;
-        padding-right: 15px;
 
     }
-
-    .p_making__font {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .p_making_coffee_fonts {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .column_making-learn-more {
-        padding-left: 15px;
-        padding-right: 15px;
-        flex-basis: 100%;
-        max-width: 100%;
-        margin-top: 0%;
-    }
-
 
 }
 
-@media (min-width: 980px) {
+@media (min-width: 920px) {
     .h3_master_coffee_making {
         font-size: 34px;
 
@@ -239,4 +205,6 @@
     .h2_master_coffee_making {
         font-size: 58px;
     }
+
+
 }
