--- a/css/galery.css
+++ b/css/galery.css
@@ -1,14 +1,14 @@
 * {box-sizing:border-box}
 
 /* Slideshow container */
-.slideshow-container {
+.slideshow-container-galery {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
 /* Hide the images by default */
-.mySlides {
+.myslides {
   display: none;
 }
 
