--- a/css/galery.css
+++ b/css/galery.css
@@ -40,7 +40,7 @@
 }
 
 /* Caption text */
-.text {
+.text-galery {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -76,7 +76,7 @@
 }
 
 /* Fading animation */
-.fade {
+.galery {
   animation-name: fade;
   animation-duration: 1.5s;
 }
