--- a/css/index-remember.css
+++ b/css/index-remember.css
@@ -1,11 +1,14 @@
 .container_remember_this {
     display: flex;
-    flex-direction: column;
     font-size: 100%;
     font: inherit;
     box-sizing: border-box;
     padding: 90px 24px 90px 24px;
     align-items: left;
+    width: 100vw;
+    margin: 0;
+
+
 }
 
 .coffe_making {
@@ -49,19 +52,32 @@
     margin-top: 100px;
 }
 
+
+
+.remember_this__features {
+    margin-left: 50px;
+    width: 100%;
+}
+
+.remember_this__two-big-photos {
+    width: 100%;
+}
+
 @media (min-width: 1000px) {
     .remember_this {
-        display: grid;
-        grid-template-columns: 500px 500px;
+        display: flex;
         align-items: center;
         margin-top: 100px;
         margin-bottom: 100px;
         justify-content: space-around;
-      
+        width: 100vw;
+
     }
-}
 
-.remember_this__features {
-    margin-left: 50px;
-}
+    .remember_this__features,
+    .remember_this__two-big-photos {
+        margin-left: 50px;
+        width: 50%;
+    }
 
+}
