--- a/css/index__blog.css
+++ b/css/index__blog.css
@@ -36,11 +36,27 @@
 
 .btn_blog_prev {
     cursor: pointer;
+    font-size: 30px;
+    display: flex;
+    align-self: center;
+    margin-left: 20px;
+    opacity: 0.7;
+}
 
+.btn_blog_next {
+    cursor: pointer;
+    font-size: 30px;
+    display: flex;
+    align-self: center;
+    margin-right: 20px;
+    opacity: 0.7;
 }
 
 .container__blog {
     min-height: 350px;
+    display: flex;
+
+
 }
 
 @media (min-width: 700px) {
