--- a/css/index-pricing.css
+++ b/css/index-pricing.css
@@ -14,7 +14,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     height: auto;
-    margin: 0 0 20px 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     color: var(--light-text-color);
 
 }
