--- a/css/index__blog.css
+++ b/css/index__blog.css
@@ -44,6 +44,8 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
