--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
     background: var(--background-dark);
     color: var(--color-white);
     margin-top: 90px;
+    position: relative;
 
 
 }
@@ -10,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #2e3032;
+    background: var(--color-btn_gray);
     text-align: left;
     margin: 50px 30px 20px 30px;
     padding: 35px 35px 35px 35px;
@@ -20,19 +21,18 @@
 .form_footer {
     display: flex;
     flex-direction: column;
-    background: #2e3032;
+    background: var(--color-btn_gray);
     justify-content: center;
     text-align: left;
     font-size: 15px;
     line-height: 25.5px;
     font-weight: 400;
-    /* position: relative; */
     margin-top: 20px;
 }
 
 .f_input {
-    border-color: #f2f0ec;
-    background-color: rgba(255, 255, 255, 0.01);
+    border-color: var(--white--color);
+    background-color: var(--text-color--bl);
     margin-top: 12px;
     size: 19px;
     margin-bottom: 24px;
@@ -41,8 +41,8 @@
     width: 100%;
     margin-top: 12px;
     border: 0;
-    color: #fff;
-    border-color: #f2f0ec;
+    color: var(--color-white);
+    border-color: var(--white--color);
     border-style: solid;
     padding: 15px 26px;
     font-size: 15px;
@@ -68,20 +68,26 @@
 
 }
 
+.f_input_send[type="submit"]:hover {
+    background-color: var(--color-wh-gr);
+    color: var(--color-btn_gray);
+    cursor: pointer;
+}
+
 
 .footer-cart {
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 50px;
-    
+
 
 }
 
 .contacts_footer {
     font-size: 38px;
-margin-top: 20px;
+    margin-top: 20px;
     line-height: 1.1;
-    font-family: Bebas Neue, cursive;
+    font-family: var(--text-title);
     font-weight: 400;
     text-transform: none;
     text-decoration: none;
@@ -95,9 +101,73 @@ margin-top: 20px;
 }
 
 .button {
-    color: rgb(255, 244, 244);
+    color: var(--color-wh-gr);
     margin-left: 7.5px;
     text-decoration: none;
+    cursor: pointer;
+}
+
+.button[type="submit"]:hover {
+    color: var(--color-wh-gr);
+    cursor: pointer;
+    text-decoration: underline;
+
+}
+
+.footer_adress {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+}
+
+.footer_cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.svg_card_footer {
+    display: flex;
+    flex-direction: row;
+    color: var(--text-color);
+
+}
+
+.cards_cards {
+    display: flex;
+    flex-direction: column;
+    margin: 7.5px 7.5px 7.5px 7.5px;
+}
+
+.cards_cards .h2_footer_card {
+    color: var(--color-white);
+    font-size: 24px;
+    line-height: 1.23;
+    letter-spacing: .02em;
+    line-height: 1.23;
+    font-family: var(--text-title);
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+    letter-spacing: .02em;
+    text-transform: none;
+}
+
+.p_footer-card {
+    font-size: 17px;
+    line-height: 1.5;
+    font-family: var(--text-content);
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+    letter-spacing: 0;
+    color: var(--color-wh-gr);
+    text-transform: none;
+
 }
 
 
@@ -107,31 +177,60 @@ margin-top: 20px;
     .footer_us {
         display: flex;
         flex-direction: row;
+        justify-content: center;
 
-    
+
 
     }
 
 
     .footer-cart {
-        
+
         flex-basis: 58.33333%;
         max-width: 58.33333%;
 
     }
 
+
+
     .form_us {
-    padding: 50px 50px 50px 50px;
- }
-    .form_us {
-        
+
         flex-basis: 41.66667%;
         max-width: 41.66667%;
+        padding: 50px 50px 50px 50px;
+        margin-left: 60px;
+        margin-right: 10px;
     }
 
     .contacts_footer {
         font-size: 38px;
     }
+
+    .footer-cart {
+        margin-right: 60px;
+    }
+
+    .footer_adress {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+
+
+    }
+
+    .footer_cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex: 1;
+    }
+
+    .h2_footer_card {
+        font-size: 28px;
+    }
+
+
 
 
 }
