--- a/css/index-making.css
+++ b/css/index-making.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     padding: 90px 24px 90px 24px;
-    width: calc(100% + 30px);
+    /* width: calc(100% + 30px);
     margin-left: -15px;
-    margin-right: -15px;
+    margin-right: -15px; */
 
 }
 
