--- a/css/index-remember.css
+++ b/css/index-remember.css
@@ -70,7 +70,7 @@
         margin-top: 100px;
         margin-bottom: 100px;
         justify-content: space-around;
-        width: 100vw;
+        /* width: 100vw; */
 
     }
 
