--- a/css/index-about.css
+++ b/css/index-about.css
@@ -1,6 +1,6 @@
 .ab__our__courses {
     display: flex;
-    background: linear-gradient(rgba(39, 41, 43, 0.8), rgba(39, 41, 43, 0.8)), url(../img/background_section_about.png);
+    background: linear-gradient(rgba(39, 41, 43, 0.8), rgba(39, 41, 43, 0.8)), url(../img/img_about_section.png);
     background-size: 100% auto;
     min-width: 320px;
     color: var(--color-white);
@@ -189,7 +189,7 @@
 
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 340px) {
     .about__our__courses {
         background-size: auto;
         font-size: 12px;
