--- a/css/index-about.css
+++ b/css/index-about.css
@@ -10,7 +10,7 @@
     font-size: 17px;
     line-height: 1.5;
     position: relative;
-    padding: 180px 20px 180px 20px;
+    padding: 140px 20px 140px 20px;
 }
 
 .about__our__inner {
@@ -18,14 +18,10 @@
     padding: 20px 20px 20px 40px;
 }
 
-
-
 .info__about__course {
     flex-basis: 33%;
     color: var(--color-white);
     padding: 40px 20px 20px 5%;
-
-
 }
 
 .about__course__time {
@@ -33,9 +29,9 @@
 }
 
 .about__btn {
+    display: flex;
     padding: 30px 0;
     margin: 0;
-
 }
 
 .btn__select__course {
@@ -58,15 +54,12 @@
     padding: 10px;
     margin: 10px;
     border: 2px solid var(--text-color);
-
 }
 
 .btn__contact:hover {
     background-color: var(--text-color);
     color: var(--color-white);
-
 }
-
 
 .accordion {
     --bs-accordion-color: var(--color-white);
@@ -86,14 +79,12 @@
     --bs-accordion-body-padding-x: 0;
     --bs-accordion-active-color: var(--color-white);
     --bs-accordion-active-bg: var(--color-none);
-
 }
 
 .accordion-button:not(.collapsed)::after {
     background-image: var(--color-white);
     transform: var(--bs-accordion-btn-icon-transform);
 }
-
 
 .accordion-button {
     font-family: var(--text-title);
@@ -102,8 +93,6 @@
 
 .accordion__about__item {
     position: relative;
-
-
 }
 
 .accordion__item__input {
@@ -123,7 +112,6 @@
 .accordion__about__content {
     display: none;
     padding: 14px 0 14px 0;
-
 }
 
 .accordion__item__input:checked~.accordion__about__content {
@@ -132,7 +120,7 @@
 
 @media screen and (max-width: 992px) {
     .ab__our__courses {
-        padding: 100px 0;
+        padding: 80px 0;
     }
 
     .about__title {
@@ -153,17 +141,14 @@
         padding: 40px 20px 20px 5%;
     }
 
-
     .about__btn {
         padding: 20px 10px 20px 0;
         margin: 10px 10px 10px 0;
-
     }
 
     .btn__select__course {
         padding: 10px;
         margin-left: 0;
-
     }
 }
 
@@ -172,6 +157,7 @@
         display: grid;
         grid-template-columns: 1fr;
         background-size: auto;
+        margin-left: 10px;
     }
 
     .about__our__inner {
@@ -186,7 +172,6 @@
     .accordion-button {
         font-size: 24px;
     }
-
 }
 
 @media screen and (max-width: 340px) {
@@ -201,7 +186,7 @@
 
     .about__btn {
         font-size: 15px;
-        display: block;
+        flex-direction: column;
 
     }
 
