--- a/css/index-students-say.css
+++ b/css/index-students-say.css
@@ -1,29 +1,47 @@
 .what__our__students__say {
     font-family: var(--text-content);
-    padding: 60px 20px 60px 20px;
+    padding: 60px 40px 60px 40px;
 }
+
 .ws__say__inner {
     display: flex;
     flex-direction: column;
+    text-align: center;
     align-items: center;
 }
-.about__course__time {
+
+.ab__course__time {
     font-size: 19px;
+    text-align: center;
 }
-.ws__carusel {
+
+.say__carousel {
+    min-height: 350px;
     display: flex;
+}
+
+.slide__container {
+    display: flex;
+    justify-content: space-around;
     flex-direction: row;
 }
+
 .ws__card {
     display: flex;
     flex-direction: column;
-    padding: 40px 20px 40px 20px;
+    padding: 40px;
 }
+
+.ws__card img {
+    width: 50px;
+    height: 50px;
+}
+
 .ws__card__name {
     font-family: var(--text-title);
     font-size: 26px;
     text-align: start;
-    
+
     padding: 14px 0 14px 0;
 }
 
@@ -37,9 +55,39 @@
     text-align: start;
     padding: 10px 0 10px 0;
 }
+
 .ws__data {
     color: var(--text-color);
     font-size: 15px;
     text-align: start;
     padding: 10px 0 10px 0;
+}
+
+.btn__prev {
+    cursor: pointer;
+    font-size: 30px;
+    display: flex;
+    align-self: center;
+    margin-left: 20px;
+    opacity: 0.7;
+}
+
+.btn__next {
+    cursor: pointer;
+    font-size: 30px;
+    display: flex;
+    align-self: center;
+    margin-right: 20px;
+    opacity: 0.7;
+}
+
+@media screen and (max-width: 760px) {
+    .what__our__students__say {
+        padding: 40px 15px 40px 15px;
+    }
+
+    .ws__card {
+        padding: 20px;
+    }
+
 }
